--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
   "dependencies": {
+    "@expo/config-plugins": "~9.0.0",
+    "@expo/metro-config": "~0.19.0",
+    "@expo/prebuild-config": "~8.0.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
     "expo": "^52.0.25",
+    "expo-modules-autolinking": "~2.0.0",
+    "firebase": "^11.2.0",
+    "react-native": "^0.76.6",
     "react-native-gesture-handler": "^2.22.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.1.0",
     "react-native-screens": "^4.5.0",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-modules-autolinking": "~2.0.0",
-    "@expo/config-plugins": "~9.0.0",
-    "@expo/prebuild-config": "~8.0.0",
-    "@expo/metro-config": "~0.19.0"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
+    "@react-native-community/cli": "^15.1.3",
     "@types/react": "~18.3.12",
     "react-devtools": "^6.0.1",
     "typescript": "^5.3.3"
